k8s/frontend.yaml
# k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      serviceAccountName: frontend-ksa
      containers:
      - name: frontend
        image: asia-northeast1-docker.pkg.dev/welcome-study-sakamoto/security-check-repo/frontend:v5
        imagePullPolicy: Always
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "200m"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  annotations:
    cloud.google.com/backend-config: '{"default": "my-security-config"}'
  
spec:
  
  type: NodePort
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 3000
